# bevy_perf_hud

./: Cargo.toml  README.md  README_CN.md  RELEASE.md
.github/workflows/: ci.yaml  release.yaml
assets/shaders/: bar.wgsl  multiline_graph.wgsl
examples/: bar_scaling_modes.rs  bars.rs  custom_metric.rs  graph.rs  simple.rs
src/: bar_components.rs  bar_scale.rs  components.rs  config.rs  constants.rs  graph_components.rs  hud_settings_components.rs  lib.rs  plugin.rs  providers.rs  render.rs  resources.rs  systems.rs
src/providers/: mod.rs
src/ui/: mod.rs
tests/: custom_provider_test.rs  integration_tests.rs  provider_tests.rs
