[package]
name = "bevy_perf_hud"
description = "Configurable performance HUD overlay plugin for Bevy apps"
version = "0.1.0"
edition = "2021"
readme = "README.md"
homepage = "https://crates.io/crates/bevy_perf_hud"
documentation = "https://docs.rs/bevy_perf_hud"
repository = "https://github.com/ZoOLForge/bevy_perf_hud"
authors = ["FoxZoOL <zhooul@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["bevy", "hud", "metrics", "performance", "overlay"]
categories = ["game-development", "visualization", "development-tools::profiling"]
exclude = ["/examples/*", "/tests/*", "assets/*", "media/*"]


[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_log",
    "multi_threaded",
    "zstd",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "sysinfo_plugin",
] }



# Compile with Performance Optimizations:
# <https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations>

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# This profile will be used by `bevy run web` automatically.
[profile.web-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

# Optimize for build time in CI.
[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4

[profile.ci.package."*"]
opt-level = 0
